[package]
name = "Alexandria"
version = "0.1.0"
authors = ["Cubeasaurous <yaegababa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket="0.4.2"
rocket_contrib="0.4.2"
serde = {version="1.0",features=["derive"]}
mysql="14.0.0"
rusqlite="0.21.0"
