[package]
name = "Alexandria"
version = "0.1.0"
authors = ["Cubeasaurous <yaegababa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket="0.4.2"
serde = {version="1.0",features=["derive"]}
mysql="14.0.0"
base64="0.11.0"
jsonwebtoken="5"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"


[dependencies.rocket_contrib]
version = "0.4.2"
default-features = true
features = ["mysql_pool","diesel_postgres_pool"]
